--- a/welove.html
+++ b/welove.html
@@ -69,7 +69,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
               <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="http://love.zxgnz.com/html/20190804/15649053622944.html#">
+            <a class="navbar-brand" href="https://socooool.github.io/web-1.0/welove.html#">
               <img src="./welove_files/logo.png"></a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
