--- a/iloveyou.html
+++ b/iloveyou.html
@@ -19,8 +19,10 @@
    
       
       <title>李碧妍我爱你</title>
+      <!--
 	<meta name="keywords" content="表白网页,我要表白网,表白网址"> 
-<meta name="description" content="陈雪我爱你-制作于www.51bbw.cn我要表白网"> 
+<meta name="description" content="陈雪我爱你-制作于www.51bbw.cn我要表白网">
+--> 
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="./iloveyou_files/bootstrap.css" rel="stylesheet" type="text/css" media="all">
       <link href="./iloveyou_files/base.css" rel="stylesheet" type="text/css" media="all">
@@ -168,7 +170,7 @@
                      <div class="block-content front-p">
                         
                         <h2 class="typo">Save the date</h2>
-                        <span id="elapseClock" class="text-white" style="font-size: 45px;font-weight: 300;"30>days <span class="digit">20</span> hours <span class="digit">14</span> minutes <span class="digit">00</span> seconds</span>
+                        <span id="elapseClock" class="text-white" style="font-size: 45px;font-weight: 300;"30>00days 00 hours 00 minutes <span class="digit">00</span> seconds</span>
                      </div>
                   </div>
                </div>
