--- a/iloveyou.html
+++ b/iloveyou.html
@@ -189,7 +189,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12 ">
                      <div class="block-img">
                         <a href="./iloveyou_files/21.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490542579422.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/21.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/21.jpg" style="display: none;">
                            </div>
                         </a>
@@ -198,7 +198,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12 ">
                      <div class="block-img">
                         <a href="./iloveyou_files/22.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490542731052.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/22.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/22.jpg" style="display: none;">
                            </div>
                         </a>
@@ -207,7 +207,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12 ">
                      <div class="block-img">
                         <a href="./iloveyou_files/23.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490543096270.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/23.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/23.jpg" style="display: none;">
                            </div>
                         </a>
@@ -216,7 +216,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12">
                      <div class="block-img">
                         <a href="./iloveyou_files/24.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490543257636.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/24.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/24.jpg" style="display: none;">
                            </div>
                         </a>
@@ -225,7 +225,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12 ">
                      <div class="block-img">
                         <a href="./iloveyou_files/25.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490543485467.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/25.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/25.jpg" style="display: none;">
                            </div>
                         </a>
@@ -234,7 +234,7 @@
                   <div class="col-md-4 col-sm-4 col-xs-12 ">
                      <div class="block-img">
                         <a href="./iloveyou_files/26.jpg" class="venobox vbox-item">
-                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/156490543662231.jpg&quot;);">
+                           <div class="background-img" style="background: url(&quot;./LOVEYOU_files/26.jpg&quot;);">
                               <img alt="" src="./iloveyou_files/26.jpg" style="display: none;">
                            </div>
                         </a>
