--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@ $(".main .year>h2>a").click(function(e){
 
 
 
-<div style="background:#ccc;text-align:center"><a href="https://socooool.github.io/web-1.0/">刷新</a>&nbsp;&nbsp;<a href="https://socooool.github.io/web-1.0/iloveyou.html">返回首页</a><!--&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a>--></div>
+<div style="background:#ccc;text-align:center"><a href="https://socooool.github.io/web-1.0/">刷新</a>&nbsp;&nbsp;<a href="https://socooool.github.io/web-1.0/iloveyou.html">进入首页</a><!--&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a>--></div>
 </body>
 </html>
