--- a/iloveyou.html
+++ b/iloveyou.html
@@ -42,7 +42,7 @@
             </div>
             <header class="header default">
                <div class=" left-part">
-                  <a class="logo scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#hero">
+                  <a class="logo scroll" href="https://socooool.github.io/love-Annlee/iloveyou.html#hero">
                      <h2>LOVE</h2>
                   </a>
                </div>
@@ -54,9 +54,9 @@
                         </a>
                      </div>
                      <ul style="">
-                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#home">爱的首页</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/welove.html">爱的故事</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#album">爱的相册</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html#home">时光机</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/welove.html">爱的故事</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/iloveyou.html#album">爱的相册</a></li>
                      </ul>
                   </nav>
                </div>
@@ -145,7 +145,7 @@
                </div>
                <div class="row">
                   <div class="col-md-12  text-center mt-100">
-                     <a href="https://socooool.github.io/web-1.0/" class="but">
+                     <a href="https://socooool.github.io/love-Annlee/" class="but">
                         <span>Home</span>
                         <svg class="but-svg" width="175" height="50" viewBox="0 0 415 120" xmlns="http://www.w3.org/2000/svg">
                            <rect class="but-rect" x="10" y="10" width="400" height="100" rx="6" ry="6"></rect>
@@ -258,7 +258,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12 text-center">
-                     <p class="uppercase heavy normal">© 2019 love. 李岩聪 &amp; 李碧妍</p>
+                     <p class="uppercase heavy normal">© 2020 love. 李岩聪 &amp; 李碧妍</p>
                   </div>
                </div>
             </div>
