--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>岩聪宝宝 & 碧妍宝宝时间轴</title>
+<title>岩聪宝宝 & 碧妍宝宝时间机</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link href="http://www.51bbw.cn/images/favicon.ico" rel="icon">
 <!-- <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -156,6 +156,6 @@ $(".main .year>h2>a").click(function(e){
 
 
 
-<div style="background:#ccc;text-align:center"><a href="https://socooool.github.io/web-1.0/">刷新</a>&nbsp;&nbsp;<a href="https://socooool.github.io/web-1.0/iloveyou.html">进入首页</a></div>
+<div style="background:#ccc;text-align:center"><a href="https://socooool.github.io/love-Annlee/">刷新</a>&nbsp;&nbsp;<a href="https://socooool.github.io/love-Annlee/iloveyou.html">进入首页</a></div>
 </body>
 </html>
