--- a/welove.html
+++ b/welove.html
@@ -67,7 +67,7 @@
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
               <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="https://socooool.github.io/web-1.0/welove.html#">
+            <a class="navbar-brand" href="https://socooool.github.io/love-Annlee/welove.html#">
               <img src="./welove_files/logo.png"></a>
           </div>
           <!-- Collect the nav links, forms, and other content for toggling -->
