--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body,td,th {
 							<p class="intro">破蛋日</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(19980228)1998年02月28号，带着一个X-Y的岩聪宝宝破蛋来到了这个神奇的世界哇哇大哭。。。哈哈！！！</p>
+								<p>日期(19980228)1998年02月28号，带着一个X-Y的岩聪宝宝破蛋来到了这个神奇的世界哇哇大哭。。。哈哈哈！！！</p>
 							</div>
 						</li>
 						<li class="cls">
@@ -39,7 +39,7 @@ body,td,th {
 							<p class="intro">破蛋日</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(20000529)2000年05月29号，带着一个X-X的碧妍宝宝破蛋来到了这个神奇的世界哇哇大哭。。。哈哈！！！ </p>
+								<p>日期(20000529)2000年05月29号，带着一个X-X的碧妍宝宝破蛋来到了这个神奇的世界哇哇大哭。。。哈哈哈！！！ </p>
 							</div>
 						</li>
 					</ul>
