--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                <div class="right-part">
                   <nav class="main-nav">
                      <div class="toggle-mobile-but">
-                        <a href="https://socooool.github.io/web-1.0/iloveyou.html#" class="mobile-but">
+                        <a href="https://socooool.github.io/web-1.0/welove.html#" class="mobile-but">
                            <div class="lines"></div>
                         </a>
                      </div>
                      <ul style="">
-                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/welove.html#home">时光机</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/welove.html">爱的故事</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/iloveyou.html#album">爱的相册</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/iloveyou.html#home">时光机</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html">爱的故事</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html#album">爱的相册</a></li>
                      </ul>
                   </nav>
                </div>
@@ -145,7 +145,7 @@
                </div>
                <div class="row">
                   <div class="col-md-12  text-center mt-100">
-                     <a href="https://socooool.github.io/love-Annlee/" class="but">
+                     <a href="https://socooool.github.io/love-Annlee/iloveyou.html" class="but">
                         <span>❤进入时光机❤</span>
                         <svg class="but-svg" width="175" height="50" viewBox="0 0 415 120" xmlns="http://www.w3.org/2000/svg">
                            <rect class="but-rect" x="10" y="10" width="400" height="100" rx="6" ry="6"></rect>
