--- a/iloveyou.html
+++ b/iloveyou.html
@@ -174,7 +174,7 @@ body,td,th {
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-							  <p>一日不见如隔三秋 见不着你就跟小黄狗一样整个人都没精神了哦</h1></p><img src="images\20200105-1.jpg" width="108" height="144" /> <img src="images\20200105-2.jpg" width="108" height="144" /></div>
+							  <p>一日不见如隔三秋 见不着你就跟小黄狗一样整个人都没了精神哦</h1></p><img src="images\20200105-1.jpg" width="108" height="144" /> <img src="images\20200105-2.jpg" width="108" height="144" /></div>
 						   </li> 
                            
                            <li class="cls">
