--- a/iloveyou.html
+++ b/iloveyou.html
@@ -282,8 +282,8 @@ body,td,th {
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-							<p>牵手第100天 甜甜视频😘0</h1></p>
-                        <video width="602px" height="345px" controls> 
+							<p>牵手第100天 甜甜小视频😘</h1></p>
+                        <video width="300px" height="172px" controls> 
 <source src="video/love100.mp4" type="video/mp4"></source> 
 <source src="video/love100.ogg" type="video/ogg"></source> 
 your browser does not support the video tag 
