--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                      </div>
                      <ul style="">
                         <li><a class="scroll" href="https://socooool.github.io/love-Annlee/iloveyou.html#home">时光机</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html">爱的故事</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html#story">爱的故事</a></li>
                         <li><a class="scroll" href="https://socooool.github.io/love-Annlee/index.html#album">爱的相册</a></li>
                      </ul>
                   </nav>
@@ -258,6 +258,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-12 text-center">
+                     <p class="uppercase heavy normal">不一定要你爱我，但是我爱你，这就是我的命运。</p>
                      <p class="uppercase heavy normal">© 2020 love. 李岩聪 &amp; 李碧妍</p>
                   </div>
                </div>
